--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "Silmu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fast-xml-parser": "^4.0.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
